syntax = "proto3";
package protos.platform.polygon.v1;
option go_package = "github.com/voxel-ai/voxel/protos/platform/v1;polygonpb";
import "google/protobuf/timestamp.proto";

service PolygonService {
  rpc GetCameras(GetCamerasRequest) returns (GetCamerasResponse) {}
  rpc GetGraphConfigYAML(GetGraphConfigYAMLRequest) returns (GetGraphConfigYAMLResponse) {}
  rpc PutGraphConfigYAML(PutGraphConfigYAMLRequest) returns (PutGraphConfigYAMLResponse) {}
}

message PutGraphConfigYAMLRequest {
  string graph_config = 1; // the full string of the graph config override
  string camera_uuid = 2; // uuid of the camera (note: not a standard 128 bit uuid)
  string reason = 3; // user's reason for updating the graph config override
}

message PutGraphConfigYAMLResponse {}

message GetGraphConfigYAMLRequest {
  string camera_uuid = 1; // uuid of the camera (note: not a standard 128 bit uuid)
}

message GetGraphConfigYAMLResponse {
  string graph_config = 1; // the full string of the graph config override
  google.protobuf.Timestamp last_modified = 2; // time of most recent update
  string reason = 3; // user's reason for updating the graph config override
}

message GetCamerasRequest {}

message GetCamerasResponse {
  repeated Camera cameras = 1;
}

message Camera {
  int64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  optional google.protobuf.Timestamp deleted_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  string uuid = 5;
  string name = 6;
  optional int64 organization_id = 7;
  optional int64 zone_id = 8;
}